<resources>
    <string name="app_name">MoviesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movies">Movies</string>
    <string name="tv">TV</string>
    <string name="popularity">Popularity</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="what_do_you_like_to_watch">WHAT DO YOU LIKE TO WATCH?</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="overview">Overview</string>
    <string name="profile">Profile</string>
    <string name="coming_soon">Coming Soon</string>
</resources>