...
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/et_search_movie"
            app:layout_constraintTop_toBottomOf="@+id/et_search_movie"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
...
